Development
	Don't adjust mediasize when in fullscreen mode
	Keep window from growing when media_detail or info is visible with playlist
	Don't write NULL data to pref store
	Allow passing a optical device name with a track from the command line "cdda://5"
	Add optical device name where needed
	Patch to fix https://bugs.webkit.org/show_bug.cgi?id=31519 by Tim Yamin
	Make XScrnSaver usage optional in configure
	Quicker path for streaming_media, when media appears to be local when using GIO
	Implement volume gain under software volume control
	Fix for GTK older thant 2.16
	Fix window sizeing issue when we show the playlist
	Version bump to 0.9.9 to start preparing for next release
	Add open folder to main file menu
	Implement setting of mplayer dvd device from mplayer preferences page, list is generated from 
		system pollable device list when gio is enabled. 
	Update tracker control to update position in timer, when media is paused and position is selected
	Make config option under interface to choose between X Screen Saver control vs Gnome Power Manager
	Always try to link with xscreensaver if available (added to .spec file)
	Drop configure option --with-gpm
	Add configure option --with-gpm=no to skip gnome-power-manager and use the XScreenSaver api
	Add %U to the Exec line in the desktop file
	Mark item as playable if a broken header is detected in a quick time file
	Tweak the pane child resize properties at runtime, should work better with remember location
	Remember pane position between audio only files
	Remove Media Change text and replace it with title in notification popup
	Add gnome-mplayer to the list of preferred applications
	Set background of gtk_socket to black, this plus a fix in gtk should fix flickering
		https://bugzilla.gnome.org/show_bug.cgi?id=598050
	Remember and restore panel position when playlist is visible on startup
	Remember softvol option patch by smoohta
	Updated Czech translation
	Fix problem with playlist detection on glib < 2.22